# fan-mode-display

./: CMakeLists.txt  README.md
core/: asus_tuf_fx705ge.cpp  asus_tuf_fx705ge.h
inc/: fanboostwatcher.h  main.h
src/: fanboostwatcher.cpp  main.cpp
ui/: mainpopup.cpp  mainpopup.h
